Completion of first draft of presentation

--- a/Data Project/Final Report/FSSI_Project_Presentation.Rmd
+++ b/Data Project/Final Report/FSSI_Project_Presentation.Rmd
@@ -54,13 +54,33 @@ Develop an interactive data visualisation report that explores trends and change
 
 ### Social Services Sector Size
 
-
+- 1/5 charities perform social services
+- Over 1,000 charities each year
+- Greatest number of charities per sector in 2016
+    - second most in 2017
 
 ### Workforce Composition
 
+- Over 35,000 paid staff in 2016 and nearly 44,000 in 2017
+- Increase in full time staff from 2016 to 2017
+    - Full time staff most common paid employee type in 2017
+- More volunteers than all paid staff combined
+
+## Results
+
 ### Sector Funding
 
+- Funding decreased from 2016 to 2017
+    - \$3bn down to \$2.3bn
+- Majority of funding from government grants
+- Proportion of funding from govt grants increased from 2016 to 2017
+- Large decrease in funding from *All Other Revenue* sources
+
 ### Financial Health of Sector
+
+- Smaller charities more likely to run a budget deficit than medium and larger charities
+  - $\approx$ 44% for small charities, $\approx$ 32% for medium, and $\approx$ 22% for large
+- Mostly similar but slightly more charities in budget deficit in social services as compared to other sectors
 
 ## Limitations & Recommendations
 
@@ -68,3 +88,11 @@ Develop an interactive data visualisation report that explores trends and change
 - Using frames of a plotly animation to see changes over time.  
 - The project also only considered one data source; ACNC data in 2016 and 2017. There is scope for further data to be sourced or collected to gain further understanding of the contribution that charities make to the social services sector.  
 - Furthermore, as the data only pertained to charities and not-for-profits, it was not possible to quantify the impact of charities on the entire sector. Data from other sources would facilitate this comparison, for example allowing comparisons to be drawn to for-profit businesses also offering social services
+
+## Insights
+
+- A large proportion of charities perform social services
+- Social services charities employ a large number of paid staff and an even greater number of volunteers
+- The sector is reliant on government grants
+- Budget deficits are very common, and more likely in smaller charities
+- This snapshot of ACNC data should be updated with data from other years and other types of data
