--- a/Data Project/Final Report/FSSI Project Final Report.Rmd
+++ b/Data Project/Final Report/FSSI Project Final Report.Rmd
@@ -1,6 +1,6 @@
 ---
 title: |
-       | Future Social Services Institute
+       | Future Social Service Institute
        | Visualising the Victorian Care Sector
 author: |
         | Xuejiao Zhou and Ben Cole
@@ -36,15 +36,16 @@ Xuejiao and Ben declare that, to the best of our knowledge, all work contained w
 
 ## Glossary {-}
 
-- FSSI - Future Social Services Institute
+- FSSI - Future Social Service Institute
 - VCOSS - Victorian Council of Social Service
 - RMIT - Royal Melbourne Institute of Technology
 - *Main activity* - variable name derived from ACNC data, loosely interchangeable with "sector". Charities report the main activity they perform to the ACNC, but also report secondary activities as well. Main activity only pertains to this main activity as reported by charities to the ACNC
 
+\newpage
 
 ## Student Contributions {-}
 
-Both student members of the project development team have contributed to the project equally.
+Both student members of the project development team have contributed to the project equally. Most of the work throughout this project has been shared, and contributions overlapped regularly. The table below lists the main contributors to each section in order, where a comma ( , ) is used. If "and" is used, contributions are equal.
 
 ```{r echo=FALSE, message=F, warning=F}
 
@@ -54,15 +55,20 @@ p_load(tidyverse,
        knitr,
        kableExtra)
 
-Contributions <- tibble(Section = c("1 Introduction, 1.1 Background, 1.2 Significance",
+Contributions <- tibble(File = c(rep("Project Proposal", 9),
+                                 "Web Report"),
+                        Section = c("1 Introduction, 1.1 Background, 1.2 Significance",
                                     "2 Brief Literature Review, 2.1 Transformation of the Social Services Sector",
-                                    "2.2 Data Visualisations in the Social Care Sector",
+                                    "2.2 Data Visualisations in the Social Services Sector",
                                     "3 Objectives",
                                     "4 Proposed Methodology, 4.1 Digital Report, 4.2 Visualisation Platform, 4.3 Stakeholder Engagement Workshops",
                                     "5 Project Design, 5.1 Timeline",
                                     "5.2 Collaboration Plan",
                                     "6 References",
-                                    "7 Appendices"),
+                                    "7 Appendices",
+                                    "Foreword",
+                                    "Sector Size and Composition - text",
+                                    "Sector Funding Sources"),
                         "Contributing Students" = c("Ben Cole",
                                                     "Ben Cole",
                                                     "Xuejiao Zhou",
@@ -71,16 +77,21 @@ Contributions <- tibble(Section = c("1 Introduction, 1.1 Background, 1.2 Signifi
                                                     "Xuejiao Zhou",
                                                     "Ben Cole",
                                                     "Xuejiao Zhou and Ben Cole",
-                                                    "Xuejiao Zhou and Ben Cole"))
+                                                    "Xuejiao Zhou and Ben Cole",
+                                                    "Ben Cole, Xuejiao Zhou",
+                                                    "Xuejiao Zhou, Ben Cole",
+                                                    ))
 
 kable(Contributions,
       format = "latex") %>% 
   kable_styling(position = "center",
                 latex_options = "striped",
                 font_size = 10) %>% 
-  column_spec(1, border_left = T, width = "80mm") %>%
+  column_spec(1, border_left = TRUE) %>% 
+  column_spec(2, width = "80mm") %>%
   column_spec(ncol(Contributions), border_right = T, width = "40mm") %>% 
-  row_spec(0, bold = T, background = "#caf6f9")
+  row_spec(0, bold = T, background = "#caf6f9") %>% 
+  collapse_rows(columns = 1)
 
 ```
 
@@ -90,7 +101,7 @@ cat("\\twocolumn")
 
 # Introduction
   
-The Future Social Services Institute (hereon *FSSI*) has been established cooperatively between the Victorian state government, the Victorian Council of Social Service (*VCOSS*), and the Royal Melbourne Institute of Technology (*RMIT*). The objectives of FSSI are wide-reaching, including (but not limited to) designing educational programs, assisting in workplace training, researching reforms for the social services sector, and supporting transformation in not-for-profit organisations. (Glanz, 2016)  
+The Future Social Service Institute (hereon *FSSI*) has been established cooperatively between the Victorian state government, the Victorian Council of Social Service (*VCOSS*), and the Royal Melbourne Institute of Technology (*RMIT*). The objectives of FSSI are wide-reaching, including (but not limited to) designing educational programs, assisting in workplace training, researching reforms for the social services sector, and supporting transformation in not-for-profit organisations. (Glanz, 2016)  
 
 There are numerous industries involved in social services, and these industries can differ between countries and cultures. As this project focuses on the social services in Victoria - and more broadly Australia - the Australian federal government website for the Department of Social Services includes the following sectors:
 
@@ -123,20 +134,20 @@ More broadly, the Australian Association of Social Workers supports the definiti
 > *Social work is a practice-based profession and an academic discipline that promotes social change and development, social cohesion, and the empowerment and liberation of people. Principles of social justice, human rights, collective responsibility and respect for diversities are central to social work. Underpinned by theories of social work, social sciences, humanities and indigenous knowledge, social work engages people and structures to address life challenges and enhance wellbeing.*  
 > \quad \- International Federation of Social Workers, \newline \quad \quad \ \ July 2014
 
-Whilst definitions for which industries comprise social services, the reasons for establishing FSSI and their data needs are much clearer.
+Whilst definitions for which industries comprise social services can vary, the reasons for establishing FSSI and their data needs are much clearer.
 
 ## Background
 
 ### An Ageing Population
 
 According to the Australian Institute of Health and Welfare, the number of Australians aged 65 and over has been increasing steadily since 1927. In 2017, the total number of Australians over the age of 65 made up 15% of Australia's total population, with this proportion only projected to grow over the coming years. (Australian Institute of Health and Welfare, 2018)  
-Considering Australia's aged population is predicted to increase, it's reasonable to assume that the number of persons in aged care will increase as well.
+Considering Australia's aged population is predicted to increase, it's reasonable to assume that the number of persons in aged care will increase as well. This isn't solely limited to those in aged care facilities, but also aged persons accessing social services from personal residences.
 
 \newpage
 
 ### Royal Commission into Aged Care Quality and Safety
 
-Numerous scandals were reported in Australian news services regarding the care of residents in aged care facilities between 2015 and 2018, particularly in South Australia. In response to an ABC News Four Corners investigation in 2018, Prime Minister Scott Morrison announced a Royal Commission into Aged Care Quality and Safety. (Hutchens, 2018)  
+Numerous scandals were reported in Australian news services regarding the care of residents in aged care facilities between 2015 and 2018, particularly in South Australia. In response to an ABC News Four Corners investigation in 2018, Prime Minister Scott Morrison announced a Royal Commission into Aged Care Quality and Safety (Hutchens, 2018).  
 The terms of reference can be viewed on the Royal Commission's government website, and cover 6 main objectives for investigation:  
 
 - whether aged care is being provided adequately
@@ -151,7 +162,7 @@ The terms of reference can be viewed on the Royal Commission's government websit
 
 ### NDIS
 
-First legislated in 2013, the National Disability Insurance Scheme (hereon *NDIS*) was established to achieve several objectives, but primarily to supply funding given to the provision of disability care (*National Disability Insurance Scheme Act, 2013*). Furthermore, the NDIS also encompasses regulation and reformation of disabliity care services in Australia. This funding amounts to AU$22 billion per year, which covers half a million Australians with a permanent and significant disability who are younger than 65 years old. This care isn't solely of a medical nature, and can also include services that address emotional health, fitness, education, opportunities to socialise, and more. (National Disability Insurance Scheme, 2020)
+First legislated in 2013, the National Disability Insurance Scheme (hereon *NDIS*) was established to achieve several objectives, but primarily to support independence in seeking supports and services as well as supplying funding given to the provision of disability care (*National Disability Insurance Scheme Act, 2013*). Furthermore, the NDIS also encompasses regulation and reformation of disabliity care services in Australia. This funding amounts to AU$22 billion per year, which covers half a million Australians with a permanent and significant disability who are younger than 65 years old. This care isn't solely of a medical nature, and can also include services that address emotional health, fitness, education, opportunities to socialise, and more. (National Disability Insurance Scheme, 2020)
 
 ### Disability Royal Commission
 
@@ -163,7 +174,7 @@ The Australian Charities and Not-for-Profit Commission (*ACNC*) (2019) reported 
 
 ## Significance
 
-The social services sector is clearly going to change considerably in the next few years, which the FSSI cite as one of the primary reasons for their being established. The FSSI is choosing to focus on 3 pillars of support to the social services sector; growth, quality, and adaption. Data collected by the ACNC will assist FSSI in assessing how the Victorian social services sector will grow over time, how the quality of it's services can be maintained and improved, and how best to both adapt to and inspire the changes that will occur in the future. 
+The social services sector is clearly going to change considerably in the next few years, which FSSI cite as one of the primary reasons for their being established. The FSSI is choosing to focus on 3 pillars of support to the social services sector; growth, quality, and adaption. Data collected by the ACNC will assist FSSI in assessing how the Victorian social services sector will grow over time, how the quality of it's services can be maintained and improved, and how best to both adapt to and inspire the changes that will occur in the future. 
 
 # Literature Review
 
@@ -172,7 +183,7 @@ The social services sector is clearly going to change considerably in the next f
 Kyle et al (2018) identified a number of indicators and predictors for the transformation occurring in the social services sector, as well as the challenges facing the industry. Chiefly among these were that there are many women currently working in care roles that are unpaid and unemployed (United Nations, 2015). Kyle et al (2018) also found that young and less educated persons faced greater difficulties in finding employment in paid roles. Further to this, wage growth has not kept up with rising productivity in social services or salary increases in other sectors, effectively resulting in pay decreases for the social services sector (Dew et al, 2016). This is coupled with an ageing workforce that is exiting the industry, showing real strain on staffing expected for the social services sector both presently and in the coming years (McKinsey Global Institute, 2017).  
 Combined with the expected ageing population stated above, the social services sector needs to embark on rapid change in order to minimise the strain it will endure in the coming years.
 
-## Data Visualisations in the Social Care Sector
+## Data Visualisations in the Social Services Sector
 
 In an age of "*big data*" , it is essential that digital transformation be undertaken across social service sectors. Karannasios (2018) demonstrates that data and analytics can be considered as important as labour and capital for modern organisations. Community services sectors should value big data and analytics as currently maintained by many commercial organisations. Young and Wessnitzer (2016) state that a good exploratory data analysis begins with the ability to describe and plot a data set. Thus, visualisations are an effective method for reviewing the data and can provide valuable insights into large data sources.  
 Visualisation techniques are used to present big data in the form of tables, charts and graphics. It is believed by experts that representing data visually makes it possible to communicate data effectively and gives people the opportunity to analyse and examine various datasets which would otherwise be difficult to understand (Kennedy & Allen 2017). However, not all visualisation tools are useful in analysing large datasets or databases. For example, Tableau is a powerful popularly used visualisation tool but often struggles with complex and large datasets.  
@@ -181,7 +192,7 @@ A good visualisation tool is able to explore data interactively and also assure 
 # Objectives
 
 The objective for this project as defined by primary stakeholder FSSI is to develop an interactive data visualisation tool that explores trends and changes between ACNC datasets for different years. 
-Stakeholders engagement determined the data visualisation tool would be used to answer several guiding questions as laid out in Appendix 1. Consultation sessions with FSSI further defined this objective to be explored using a web-based document that allows for interactive visualisations.
+Stakeholder engagement determined the data visualisation tool would be used to answer several guiding questions as laid out in Appendix 1. Consultation sessions with FSSI further defined this objective to be explored using a web-based document that allows for interactive visualisations.
 
 \newpage
 
@@ -252,7 +263,7 @@ Small charities employed around 1% of the total social service industry workforc
 - 178 and 169 part-time workers (46.7% and 37.8%)
 - 326 and 334 casual workers (41.7% and 34.4%)
 
-The vast majority of Victorian Social services industry charities are supported by unpaid volunteer worker. Volunteer workers accounts for 68.2% of the total social service industry workforce in 2016 and was decreased slightly to 61.7%.
+The vast majority of Victorian social services industry charities are supported by unpaid volunteer worker. Volunteer workers accounts for 68.2% of the total social service industry workforce in 2016 and was decreased slightly to 61.7%.
 
 Small charities of social service sectors rely the most on volunteers (97.2% in 2016, 96.5% in 2017) followed by medium (85.3% and 78.2%) and large charities (62.7% and 56.3%).
 
@@ -317,8 +328,8 @@ Data visualisations served well to explore the Victorian ACNC data considering i
 The dot-and-line visualisations used to observe changes in continuous variables between the two years comprised considerable white/blank space when only examining a small number of categories, or when examining variables with a wide dispersion of data points between categories. For data summaries of a small nature, other visualisations could be explored, particularly using frames of a `plotly` animation to see changes over time.  
 The project also only considered one data source; ACNC data in 2016 and 2017. There is scope for further data to be sourced or collected to gain further understanding of the contribution that charities make to the social services sector. Furthermore, as the data only pertained to charities and not-for-profits, it was not possible to quantify the impact of charities on the entire sector. Data from other sources would facilitate this comparison, for example allowing comparisons to be drawn to for-profit businesses also offering social services.
 
-
 ## Summary
+
 
 
 \newpage
