--- a/Data Project/Final Report/FSSI-Project-Final-Report.tex
+++ b/Data Project/Final Report/FSSI-Project-Final-Report.tex
@@ -140,7 +140,7 @@
 \usepackage{makecell}
 \usepackage{xcolor}
 
-\title{Future Social Services Institute\\
+\title{Future Social Service Institute\\
 Visualising the Victorian Care Sector}
 \author{Xuejiao Zhou and Ben Cole\\
 s3741909 and s3412349}
@@ -180,7 +180,7 @@ Xuejiao and Ben declare that, to the best of our knowledge, all work contained w
 \begin{itemize}
 \tightlist
 \item
-  FSSI - Future Social Services Institute
+  FSSI - Future Social Service Institute
 \item
   VCOSS - Victorian Council of Social Service
 \item
@@ -193,32 +193,34 @@ Xuejiao and Ben declare that, to the best of our knowledge, all work contained w
 \subsection*{Student Contributions}\label{student-contributions}}
 \addcontentsline{toc}{subsection}{Student Contributions}
 
-Both student members of the project development team have contributed to the project equally.
+Both student members of the project development team have contributed to the project equally. Most of the work throughout this project has been shared, and contributions overlapped regularly. The table below lists the main contributors to each section in order, where a comma ( , ) is used. If ``and'' is used, contributions are equal.
 
 \begin{table}[H]
 \centering\begingroup\fontsize{10}{12}\selectfont
 
-\begin{tabular}{|>{\raggedright\arraybackslash}p{80mm}|>{\raggedright\arraybackslash}p{40mm}|}
+\begin{tabular}{|>{}l|>{\raggedright\arraybackslash}p{80mm}|>{\raggedright\arraybackslash}p{40mm}|}
 \hline
-\rowcolor[HTML]{caf6f9}  \textbf{Section} & \textbf{Contributing Students}\\
+\rowcolor[HTML]{caf6f9}  \textbf{File} & \textbf{Section} & \textbf{Contributing Students}\\
 \hline
-\rowcolor{gray!6}  1 Introduction, 1.1 Background, 1.2 Significance & Ben Cole\\
-\hline
-2 Brief Literature Review, 2.1 Transformation of the Social Services Sector & Ben Cole\\
-\hline
-\rowcolor{gray!6}  2.2 Data Visualisations in the Social Care Sector & Xuejiao Zhou\\
-\hline
-3 Objectives & Xuejiao Zhou\\
-\hline
-\rowcolor{gray!6}  4 Proposed Methodology, 4.1 Digital Report, 4.2 Visualisation Platform, 4.3 Stakeholder Engagement Workshops & Ben Cole\\
-\hline
-5 Project Design, 5.1 Timeline & Xuejiao Zhou\\
-\hline
-\rowcolor{gray!6}  5.2 Collaboration Plan & Ben Cole\\
-\hline
-6 References & Xuejiao Zhou and Ben Cole\\
-\hline
-\rowcolor{gray!6}  7 Appendices & Xuejiao Zhou and Ben Cole\\
+\rowcolor{gray!6}   & 1 Introduction, 1.1 Background, 1.2 Significance & Ben Cole\\
+\cline{2-3}
+ & 2 Brief Literature Review, 2.1 Transformation of the Social Services Sector & Ben Cole\\
+\cline{2-3}
+\rowcolor{gray!6}   & 2.2 Data Visualisations in the Social Services Sector & Xuejiao Zhou\\
+\cline{2-3}
+ & 3 Objectives & Xuejiao Zhou\\
+\cline{2-3}
+\rowcolor{gray!6}   & 4 Proposed Methodology, 4.1 Digital Report, 4.2 Visualisation Platform, 4.3 Stakeholder Engagement Workshops & Ben Cole\\
+\cline{2-3}
+ & 5 Project Design, 5.1 Timeline & Xuejiao Zhou\\
+\cline{2-3}
+\rowcolor{gray!6}   & 5.2 Collaboration Plan & Ben Cole\\
+\cline{2-3}
+ & 6 References & Xuejiao Zhou and Ben Cole\\
+\cline{2-3}
+\rowcolor{gray!6}  \multirow{-9}{*}{\raggedright\arraybackslash Project Proposal} & 7 Appendices & Xuejiao Zhou and Ben Cole\\
+\cline{1-3}
+Web Report & Foreword & Ben Cole, Xuejiao Zhou\\
 \hline
 \end{tabular}
 \endgroup{}
@@ -229,7 +231,7 @@ Both student members of the project development team have contributed to the pro
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
 
-The Future Social Services Institute (hereon \emph{FSSI}) has been established cooperatively between the Victorian state government, the Victorian Council of Social Service (\emph{VCOSS}), and the Royal Melbourne Institute of Technology (\emph{RMIT}). The objectives of FSSI are wide-reaching, including (but not limited to) designing educational programs, assisting in workplace training, researching reforms for the social services sector, and supporting transformation in not-for-profit organisations. (Glanz, 2016)
+The Future Social Service Institute (hereon \emph{FSSI}) has been established cooperatively between the Victorian state government, the Victorian Council of Social Service (\emph{VCOSS}), and the Royal Melbourne Institute of Technology (\emph{RMIT}). The objectives of FSSI are wide-reaching, including (but not limited to) designing educational programs, assisting in workplace training, researching reforms for the social services sector, and supporting transformation in not-for-profit organisations. (Glanz, 2016)
 
 There are numerous industries involved in social services, and these industries can differ between countries and cultures. As this project focuses on the social services in Victoria - and more broadly Australia - the Australian federal government website for the Department of Social Services includes the following sectors:
 
@@ -286,7 +288,7 @@ More broadly, the Australian Association of Social Workers supports the definiti
 \quad - International Federation of Social Workers, \newline \quad \quad ~~July 2014
 \end{quote}
 
-Whilst definitions for which industries comprise social services, the reasons for establishing FSSI and their data needs are much clearer.
+Whilst definitions for which industries comprise social services can vary, the reasons for establishing FSSI and their data needs are much clearer.
 
 \hypertarget{background}{%
 \subsection{Background}\label{background}}
@@ -295,14 +297,14 @@ Whilst definitions for which industries comprise social services, the reasons fo
 \subsubsection{An Ageing Population}\label{an-ageing-population}}
 
 According to the Australian Institute of Health and Welfare, the number of Australians aged 65 and over has been increasing steadily since 1927. In 2017, the total number of Australians over the age of 65 made up 15\% of Australia's total population, with this proportion only projected to grow over the coming years. (Australian Institute of Health and Welfare, 2018)\\
-Considering Australia's aged population is predicted to increase, it's reasonable to assume that the number of persons in aged care will increase as well.
+Considering Australia's aged population is predicted to increase, it's reasonable to assume that the number of persons in aged care will increase as well. This isn't solely limited to those in aged care facilities, but also aged persons accessing social services from personal residences.
 
 \newpage
 
 \hypertarget{royal-commission-into-aged-care-quality-and-safety}{%
 \subsubsection{Royal Commission into Aged Care Quality and Safety}\label{royal-commission-into-aged-care-quality-and-safety}}
 
-Numerous scandals were reported in Australian news services regarding the care of residents in aged care facilities between 2015 and 2018, particularly in South Australia. In response to an ABC News Four Corners investigation in 2018, Prime Minister Scott Morrison announced a Royal Commission into Aged Care Quality and Safety. (Hutchens, 2018)\\
+Numerous scandals were reported in Australian news services regarding the care of residents in aged care facilities between 2015 and 2018, particularly in South Australia. In response to an ABC News Four Corners investigation in 2018, Prime Minister Scott Morrison announced a Royal Commission into Aged Care Quality and Safety (Hutchens, 2018).\\
 The terms of reference can be viewed on the Royal Commission's government website, and cover 6 main objectives for investigation:
 
 \begin{itemize}
@@ -328,7 +330,7 @@ The terms of reference can be viewed on the Royal Commission's government websit
 \hypertarget{ndis}{%
 \subsubsection{NDIS}\label{ndis}}
 
-First legislated in 2013, the National Disability Insurance Scheme (hereon \emph{NDIS}) was established to achieve several objectives, but primarily to supply funding given to the provision of disability care (\emph{National Disability Insurance Scheme Act, 2013}). Furthermore, the NDIS also encompasses regulation and reformation of disabliity care services in Australia. This funding amounts to AU\$22 billion per year, which covers half a million Australians with a permanent and significant disability who are younger than 65 years old. This care isn't solely of a medical nature, and can also include services that address emotional health, fitness, education, opportunities to socialise, and more. (National Disability Insurance Scheme, 2020)
+First legislated in 2013, the National Disability Insurance Scheme (hereon \emph{NDIS}) was established to achieve several objectives, but primarily to support independence in seeking supports and services as well as supplying funding given to the provision of disability care (\emph{National Disability Insurance Scheme Act, 2013}). Furthermore, the NDIS also encompasses regulation and reformation of disabliity care services in Australia. This funding amounts to AU\$22 billion per year, which covers half a million Australians with a permanent and significant disability who are younger than 65 years old. This care isn't solely of a medical nature, and can also include services that address emotional health, fitness, education, opportunities to socialise, and more. (National Disability Insurance Scheme, 2020)
 
 \hypertarget{disability-royal-commission}{%
 \subsubsection{Disability Royal Commission}\label{disability-royal-commission}}
@@ -343,7 +345,7 @@ The Australian Charities and Not-for-Profit Commission (\emph{ACNC}) (2019) repo
 \hypertarget{significance}{%
 \subsection{Significance}\label{significance}}
 
-The social services sector is clearly going to change considerably in the next few years, which the FSSI cite as one of the primary reasons for their being established. The FSSI is choosing to focus on 3 pillars of support to the social services sector; growth, quality, and adaption. Data collected by the ACNC will assist FSSI in assessing how the Victorian social services sector will grow over time, how the quality of it's services can be maintained and improved, and how best to both adapt to and inspire the changes that will occur in the future.
+The social services sector is clearly going to change considerably in the next few years, which FSSI cite as one of the primary reasons for their being established. The FSSI is choosing to focus on 3 pillars of support to the social services sector; growth, quality, and adaption. Data collected by the ACNC will assist FSSI in assessing how the Victorian social services sector will grow over time, how the quality of it's services can be maintained and improved, and how best to both adapt to and inspire the changes that will occur in the future.
 
 \hypertarget{literature-review}{%
 \section{Literature Review}\label{literature-review}}
@@ -354,8 +356,8 @@ The social services sector is clearly going to change considerably in the next f
 Kyle et al (2018) identified a number of indicators and predictors for the transformation occurring in the social services sector, as well as the challenges facing the industry. Chiefly among these were that there are many women currently working in care roles that are unpaid and unemployed (United Nations, 2015). Kyle et al (2018) also found that young and less educated persons faced greater difficulties in finding employment in paid roles. Further to this, wage growth has not kept up with rising productivity in social services or salary increases in other sectors, effectively resulting in pay decreases for the social services sector (Dew et al, 2016). This is coupled with an ageing workforce that is exiting the industry, showing real strain on staffing expected for the social services sector both presently and in the coming years (McKinsey Global Institute, 2017).\\
 Combined with the expected ageing population stated above, the social services sector needs to embark on rapid change in order to minimise the strain it will endure in the coming years.
 
-\hypertarget{data-visualisations-in-the-social-care-sector}{%
-\subsection{Data Visualisations in the Social Care Sector}\label{data-visualisations-in-the-social-care-sector}}
+\hypertarget{data-visualisations-in-the-social-services-sector}{%
+\subsection{Data Visualisations in the Social Services Sector}\label{data-visualisations-in-the-social-services-sector}}
 
 In an age of ``\emph{big data}'' , it is essential that digital transformation be undertaken across social service sectors. Karannasios (2018) demonstrates that data and analytics can be considered as important as labour and capital for modern organisations. Community services sectors should value big data and analytics as currently maintained by many commercial organisations. Young and Wessnitzer (2016) state that a good exploratory data analysis begins with the ability to describe and plot a data set. Thus, visualisations are an effective method for reviewing the data and can provide valuable insights into large data sources.\\
 Visualisation techniques are used to present big data in the form of tables, charts and graphics. It is believed by experts that representing data visually makes it possible to communicate data effectively and gives people the opportunity to analyse and examine various datasets which would otherwise be difficult to understand (Kennedy \& Allen 2017). However, not all visualisation tools are useful in analysing large datasets or databases. For example, Tableau is a powerful popularly used visualisation tool but often struggles with complex and large datasets.\\
@@ -365,7 +367,7 @@ A good visualisation tool is able to explore data interactively and also assure 
 \section{Objectives}\label{objectives}}
 
 The objective for this project as defined by primary stakeholder FSSI is to develop an interactive data visualisation tool that explores trends and changes between ACNC datasets for different years.
-Stakeholders engagement determined the data visualisation tool would be used to answer several guiding questions as laid out in Appendix 1. Consultation sessions with FSSI further defined this objective to be explored using a web-based document that allows for interactive visualisations.
+Stakeholder engagement determined the data visualisation tool would be used to answer several guiding questions as laid out in Appendix 1. Consultation sessions with FSSI further defined this objective to be explored using a web-based document that allows for interactive visualisations.
 
 \newpage
 
@@ -479,7 +481,7 @@ Small charities employed around 1\% of the total social service industry workfor
   326 and 334 casual workers (41.7\% and 34.4\%)
 \end{itemize}
 
-The vast majority of Victorian Social services industry charities are supported by unpaid volunteer worker. Volunteer workers accounts for 68.2\% of the total social service industry workforce in 2016 and was decreased slightly to 61.7\%.
+The vast majority of Victorian social services industry charities are supported by unpaid volunteer worker. Volunteer workers accounts for 68.2\% of the total social service industry workforce in 2016 and was decreased slightly to 61.7\%.
 
 Small charities of social service sectors rely the most on volunteers (97.2\% in 2016, 96.5\% in 2017) followed by medium (85.3\% and 78.2\%) and large charities (62.7\% and 56.3\%).
 
