--- a/Data Project/Web Report/FSSI_Web_Report.Rmd
+++ b/Data Project/Web Report/FSSI_Web_Report.Rmd
@@ -588,7 +588,7 @@ ggplotly(gg_Sum_VIC_SocServ_1617,
 
 From 2016 to 2017, the dominant staff type was changed from part-time to full-time. The number of casual staff was the smallest in 2016 and 2017 compared with other staff types. A slight decrease of 4.7% in number of casual employees was seen in the period of 2016 to 2017; from 36,868 to 36,551 respectively. There were changes in the number of part-time employees and the number of full-time employees as well. The number of part-time employees decreased from 67,131 to 63,140 (10.4% drop) and the number of full-time employees increased from 46,516 to 84,849 (15.1% increase).
 
-Social services charities had the largest number of all-type employees as well as full-time and casual type employees in 2016 but in 2017, the largest number of staff were in aged care charities. The number of staff in social services charities accounted for 23.5% of total number of charity staff in 2016 and decreased to 23.4% in 2017. Conversely, the total number of staff in organizations performing aged care activities increased from 20.2% to 24.6%. Other health service delivery charities saw the second largest number of employees and aged care activities had the third largest number of employees, which were 32,574 and 30,418 respectively in 2016. Things changed in 2017 while social services sectors and other education sectors were in the second and third place regarding to numbers of staffs. Income support and maintenance and civic and advocacy activities are seen having the smallest proportions of staffs.
+Social services charities had the largest number of total employees as well as full-time and casual type employees in 2016 but in 2017, the largest number of staff were in aged care charities. The number of staff in social services charities accounted for 23.45% of total number of charity staff in 2016 and increased slightly to 23.53% in 2017. Conversely, the total number of staff in organizations performing aged care activities increased from 20.2% to 24.6%. Other health service delivery charities saw the second largest number of employees and aged care activities had the third largest number of employees, which were 32,574 and 30,418 respectively in 2016. Things changed in 2017 while social services sectors and other education sectors were in the second and third place regarding to numbers of staffs. Income support and maintenance and civic and advocacy activities are seen having the smallest proportions of staffs.
 
 ## Employees {.tabset .tabset-pills}
 
